<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:gravity="center"
     android:orientation="vertical"
     android:layout_marginTop="20pt">
   	<View
					android:layout_height="10dp"
					android:layout_width="match_parent"/>
    
    
				<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="2.0dip"
					android:layout_marginStart="40.0dip"
					android:layout_marginEnd="40.0dip">

					<View
						android:background="@drawable/backgroud_infoapp"
						android:layout_width="wrap_content"
						android:layout_height="8.0dip"
						android:layout_weight="2.0"
						android:layout_centerVertical="true"/>

					<View
						android:background="@drawable/backgroud_infoapp"
						android:layout_width="wrap_content"
						android:layout_height="26.0dip"
						android:layout_weight="1.0"
						android:layout_marginStart="18.0dip"
						android:layout_marginEnd="18.0dip"/>

					<TextView
                       android:typeface="serif"
						android:textSize="16.0dip"
						android:textStyle="bold"
						android:textColor="#ffffffff"
						android:gravity="center"
						android:paddingLeft="10.0dip"
						android:paddingRight="10.0dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/app_dblack"
						android:textScaleX="1.6"
						android:shadowColor="#ff000000"
						android:shadowDx="1.0"
						android:shadowDy="1.0"
						android:shadowRadius="1.0"
						android:layout_centerHorizontal="true"
						android:layout_centerVertical="true"/>

				</RelativeLayout>

					<View
					android:layout_height="10dp"
					android:layout_width="match_parent"/>
    
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="0pt">

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:gravity="center"
             android:shadowRadius="2.0"
             android:textSize="14pt"
             android:textColor="@color/light_green"
             android:shadowColor="#fff"
             android:id="@+id/monsour_stats"
             android:text="@string/voce_conectado" />

       

    </LinearLayout>

    <ScrollView
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:layout_marginTop="6pt">

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:orientation="vertical">

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="fill_parent"
                 android:layout_marginEnd="20pt"
                 android:background="@drawable/conteiner_backgroud"
                 android:padding="8pt"
                 android:orientation="vertical"
                 android:layout_marginTop="2pt"
                 android:layout_marginStart="20pt">

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:textSize="10pt"
                   android:textColor="#ffd6d3d3"
                     android:text="@string/informacoes" />

                <RelativeLayout
                     android:layout_height="wrap_content"
                     android:layout_width="fill_parent"
                     android:layout_marginTop="5pt">

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_centerVertical="true"
                         android:textSize="7pt"
                         android:textColor="#ffd6d3d3"
                         android:text="@string/servidor_atual" />

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_centerVertical="true"
                         android:textSize="7pt"
                       android:textColor="#ffd6d3d3"
                         android:layout_alignParentEnd="true"
                         android:id="@+id/servidorAtual"
                         android:text="..." />

                </RelativeLayout>

                <RelativeLayout
                     android:layout_height="wrap_content"
                     android:layout_width="fill_parent">

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_centerVertical="true"
                         android:textSize="7pt"
                         android:textColor="#ffd6d3d3"
                         android:text="@string/conexao_atual" />

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_centerVertical="true"
                         android:textSize="7pt"
                       android:textColor="#ffd6d3d3"
                         android:layout_alignParentEnd="true"
                         android:id="@+id/conexaoAtual"
                         android:text="..." />

                </RelativeLayout>

              

              

            </LinearLayout>

          
            
             
            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="fill_parent"
                 android:layout_marginEnd="20pt"
                 android:background="@drawable/conteiner_backgroud"
                 android:padding="8pt"
                 android:orientation="vertical"
                 android:layout_marginTop="5pt"
                 android:layout_marginStart="20pt">

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:textSize="10pt"
                   android:textColor="#ffd6d3d3"
                     android:text="@string/velocidade_conexao" />

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:textSize="7pt"
                     android:textColor="#ffd6d3d3"
                     android:layout_marginTop="6pt"
                     android:text="@string/velocidade_download_atual" />

                <RelativeLayout
                     android:layout_height="wrap_content"
                     android:layout_width="fill_parent"
                     android:layout_marginTop="6pt">

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_centerInParent="true"
                         android:textSize="9pt"
                       android:textColor="#ffd6d3d3"
                         android:layout_centerHorizontal="true"
                         android:id="@+id/velocidadeDown"
                         android:text="" />

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:layout_marginEnd="5dp"
                         android:gravity="center"
                         android:orientation="horizontal"
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="5dp"
                         android:layout_gravity="center">

                        <Button
                             android:layout_height="50dp"
                             android:layout_width="300dp"
                             android:layout_marginBottom="5dp"
                             android:layout_marginEnd="5dp"
                             android:background="@drawable/btn_connect"
                             android:gravity="center"
                             android:textColor="@color/white"
                             android:layout_marginTop="5dp"
                             android:layout_marginStart="7dp"
                             android:id="@+id/btn_connect2"
                             android:text="@string/btn_connect"
                             android:textStyle="bold" />

                    </RelativeLayout>
            
            
            
        </LinearLayout>

    </ScrollView>

</LinearLayout>